infra/k8s/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: hub.localdev.me
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: hub-app-srv
                port:
                  number: 3000
